--- a/app/src/main/res/layout/item_home_featured.xml
+++ b/app/src/main/res/layout/item_home_featured.xml
@@ -8,7 +8,7 @@
     android:layout_height="200dp">
 <ImageView
     android:id="@+id/featuredImage"
-    android:scaleType="centerCrop"
+    android:scaleType="fitCenter"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
 </androidx.cardview.widget.CardView>
